projects/examples/source/02.41.cpp
/////////////////////////////////////////////////////////////////

// chapter : Functions

/////////////////////////////////////////////////////////////////

// content : Dangling Pointers and References
//
// content : Data and Block Started by Symbol (BSS) Segments
//
// content : Static Objects
//
// content : Storage Class Specifier static

/////////////////////////////////////////////////////////////////

#include <cassert>

/////////////////////////////////////////////////////////////////

// auto   make_integer_v1() { auto x = 1; return &x; } // error

// auto & make_integer_v2() { auto x = 1; return  x; } // error

/////////////////////////////////////////////////////////////////

auto const & make_integer_v3()
{
	static auto x = 0; // support : https://compiler-explorer.com

	return ++x;
}

/////////////////////////////////////////////////////////////////

int main()
{
//  assert(*make_integer_v1() == 1); // error

//	assert( make_integer_v2() == 1); // error

    assert( make_integer_v3() == 1);

    assert( make_integer_v3() == 2);

    assert( make_integer_v3() == 3);
}

/////////////////////////////////////////////////////////////////